// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base <BaseField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="baseField"
  name="baseField"
  value=""
/>
`;

exports[`base <BaseField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="baseField"
      >
        Test*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="baseField"
          label="Test"
          name="baseField"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`base <BaseField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="baseField"
      >
        Test
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="baseField"
          label="Test"
          name="baseField"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`base <BaseRangeField /> matches snapshot 1`] = `
<input
  class="sc-bqGHjH bZbIfE"
  id="baseRangeField"
  max="10000"
  min="300"
  name="baseRangeField"
  step="100"
  value="2000"
/>
`;

exports[`base <BaseRangeField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <div
        class="sc-jrsJCI gRaWaU"
      >
        <label
          for="baseRangeField"
        >
          Test
        </label>
        <div
          class="sc-dIsAE esAFLE"
        >
          <input
            class="sc-bqGHjH bZbIfE"
            id="baseRangeField"
            label="Test"
            max="10000"
            min="300"
            name="baseRangeField"
            step="100"
            value="2000"
          />
          <span
            class="sc-fFSRdu bULHRF"
          >
            PLN
          </span>
        </div>
      </div>
      <div
        class="sc-iemXMA ijBKWi"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="10000"
          aria-valuemin="300"
          aria-valuenow="2000"
          class="rangeslider rangeslider-horizontal"
        >
          <div
            class="rangeslider__fill"
            style="width: 0px;"
          />
          <div
            class="rangeslider__handle"
            style="left: 0px;"
            tabindex="0"
          >
            <div
              class="rangeslider__handle-label"
            />
          </div>
          <ul
            class="rangeslider__labels"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`base <BaseSelectField /> matches snapshot 1`] = `
<select
  class="sc-ksluoS cwGMZt"
  id="baseSelectField"
  name="baseSelectField"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="test1"
  >
    test1
  </option>
  <option
    value="test2"
  >
    test2
  </option>
</select>
`;

exports[`base <BaseSelectField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="baseSelectField"
      >
        Test
      </label>
      <select
        class="sc-ksluoS cwGMZt"
        id="baseSelectField"
        label="Test"
        name="baseSelectField"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="test1"
        >
          test1
        </option>
        <option
          value="test2"
        >
          test2
        </option>
      </select>
    </div>
  </form>
</div>
`;
